# mariadb_binlog_rust_parser

./: Cargo.toml  README.md  field_types.txt  metablock_mapping.txt
src/: lib.rs  main.rs  model.rs  service.rs  util.rs
