[package]
name = "mariadb_binlog_parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
chrono = "0.4.38"
lazy_static = "1.4.0"
notify = {version = "6.1.1", features = ["serde"]}

[features]
test = []
